--- a/yaml/jobs/tenant-setup.yml
+++ b/yaml/jobs/tenant-setup.yml
@@ -28,14 +28,14 @@ jobs:
     proxyAppRegistrationObjectId: ${{parameters.proxyAppRegistrationObjectId}}
     eapimRootUrl: ${{parameters.eapimRootUrl}}
   steps:
-    - task: Tokenization@2
-      displayName: Tokenise Policy Files
-      inputs:
-        SourcePath: '$(Build.SourcesDirectory)\policy\'
-        TargetFileNames: '*.xml'
-        RequireVariable: true
-        TokenStart: '__'
-        TokenEnd: '__'
+    # - task: Tokenization@2
+    #   displayName: Tokenise Policy Files
+    #   inputs:
+    #     SourcePath: '$(Build.SourcesDirectory)\policy\'
+    #     TargetFileNames: '*.xml'
+    #     RequireVariable: true
+    #     TokenStart: '__'
+    #     TokenEnd: '__'
     - pwsh: |
         Write-Host "(uc) environmentName $Env:ENVIRONMENTNAME"
         Write-Host "(lc) environmentName $Env:environmentName"
