--- a/yaml/jobs/tenant-setup.yml
+++ b/yaml/jobs/tenant-setup.yml
@@ -39,7 +39,12 @@ jobs:
     - pwsh: |
         $policyScript = Invoke-WebRequest $Env:policyDeployScriptUrl
         $scriptBlock = [Scriptblock]::Create($policyScript.Content)
-        Write-Host 'Uploading B2C_1A_TrustFrameworkBase_invitation'
+
+        Write-Host "P : $Env:uploaderPrincipalClientId"
+        Write-Host "S : $Env:uploaderPrincipalSecret"
+        Write-Host "T : $Env:tenantId"
+
+        Write-Host 'Uploading B2C_1A_TrustFrameworkBase_Invitation'
         Invoke-Command -ScriptBlock $scriptBlock -ArgumentList ($args + @('$Env:uploaderPrincipalClientId', '$Env:uploaderPrincipalSecret', '$Env:tenantId', 'B2C_1A_TrustFrameworkBase_invitation', '$(Build.SourcesDirectory)\policy\TrustFrameworkBase.xml' ))
         Write-Host 'Upload Complete'
 
