--- a/yaml/jobs/tenant-setup.yml
+++ b/yaml/jobs/tenant-setup.yml
@@ -39,18 +39,8 @@ jobs:
     - pwsh: |
         $policyScript = Invoke-WebRequest $Env:policyDeployScriptUrl
         $scriptBlock = [Scriptblock]::Create($policyScript.Content)
-
-        Write-Host "P : $Env:uploaderPrincipalClientId"
-        Write-Host "S : $Env:uploaderPrincipalSecret"
-        Write-Host "T : $Env:tenantId"
-
+        
         Write-Host 'Uploading B2C_1A_TrustFrameworkBase_Invitation'
-        Invoke-Command -ScriptBlock $scriptBlock -ArgumentList ($args + @('$Env:uploaderPrincipalClientId', '$Env:uploaderPrincipalSecret', '$Env:tenantId', 'B2C_1A_TrustFrameworkBase_Invitation', '$(Build.SourcesDirectory)\policy\TrustFrameworkBase_Invitation.xml' ))
+        Invoke-Command -ScriptBlock $scriptBlock -ArgumentList ($args + @('$($Env:uploaderPrincipalClientId)', '$($Env:uploaderPrincipalSecret)', '$($Env:tenantId)', 'B2C_1A_TrustFrameworkBase_Invitation', '$(Build.SourcesDirectory)\policy\TrustFrameworkBase_Invitation.xml' ))
         Write-Host 'Upload Complete'
 
-
-    # - task: PowerShell@2
-    #   inputs:
-    #     filePath: '$(Build.SourcesDirectory)\scripts\UploadFrameworkPolicy.ps1'
-    #     arguments: '-clientId ${{parameters.uploaderPrincipalClientId}} -clientSecret ${{parameters.uploaderPrincipalSecret}} -tenantId ${{parameters.tenantId}} -policyId B2C_1A_TrustFrameworkBase_invitation -pathToFile $(Build.SourcesDirectory)\policy\TrustFrameworkBase.xml'
-    #     displayName: Policy Upload
