--- a/yaml/jobs/tenant-setup.yml
+++ b/yaml/jobs/tenant-setup.yml
@@ -37,12 +37,10 @@ jobs:
         TokenStart: '__'
         TokenEnd: '__'
     - pwsh: |
-        $policyScript = Invoke-WebRequest $Env:policyDeployScriptUrl
-        $scriptBlock = [Scriptblock]::Create($policyScript.Content)
-
-        Write-Host $scriptBlock.content
 
         Write-Host 'Uploading B2C_1A_TrustFrameworkBase_Invitation'
+
+        Write-Host Path "$Env:Build_SourcesDirectory\scripts"
         Invoke-Command -ScriptBlock $scriptBlock -ArgumentList ($args + @("$($Env:uploaderPrincipalClientId)", "$($Env:uploaderPrincipalSecret)", "$($Env:tenantId)", "B2C_1A_TrustFrameworkBase_Invitation", "$(Build.SourcesDirectory)\policy\TrustFrameworkBase_Invitation.xml"))
         Write-Host 'Upload Complete'
 
