--- a/src/B2CAzureFunc/B2CAzureFunc.csproj
+++ b/src/B2CAzureFunc/B2CAzureFunc.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.0.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.2.7" />
     <PackageReference Include="Microsoft.OpenApi.CSharpAnnotations.DocumentGeneration" Version="2.0.0-beta02" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Core" Version="3.0.16" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Http" Version="3.0.2" />
@@ -25,6 +26,12 @@
     <ProjectReference Include="..\Providers.Email\Providers.Email.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <None Update="EmailChnage_NewEmail.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="EmailChnage_OldEmail.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="EmailTemplates\AdviserCreatedAccount\AdviserCreatedAccount_inlined_css.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
