--- a/src/B2CAzureFunc/local.settings.json
+++ b/src/B2CAzureFunc/local.settings.json
@@ -31,10 +31,18 @@
     "Ocp-Apim-Subscription-Key": "92f1fe387ea14bab9567403c4c1d5e72",
     "ncs-dss-search-api-version": "v2",
     "resendSignupEmail": "Activate your account",
-    //new
     "ncs-dss-create-customer-api-url": "https://at.api.nationalcareersservice.org.uk/customers/api/Customers/",
     "ncs-dss-create-contact-api-url": "https://at.api.nationalcareersservice.org.uk/contactdetails/api/customers/{0}/ContactDetails/",
     "ncs-dss-create-identity-api-url": "https://at.api.nationalcareersservice.org.uk/digitalidentities/api/identity",
-    "TouchpointId": "1000000000"
+    "TouchpointId": "1000000000",
+
+    //new
+    "b2c:Tenant": "devauthncs.onmicrosoft.com",
+    "b2c:GraphAccessClientId": "9e28727a-9abe-4d3b-80e8-367889846e1c",
+    "b2c:GraphAccessClientSecret": "S5EUqH6PyEI.2qqztYlC4Pqx.1B.~8GTe7",
+    "EmailChangeConfirmationEmailSubjectNewEmail": "Email change request",
+    "EmailChangeConfirmationEmailSubjectOldEmail": "Email change request",
+    "B2CChangeEmailPolicy": "B2C_1A_changeemail",
+    "ExtensionAppId": "9509a3af9e674a7d9443a094c02c8e69"
   }
 }
